STIJ-358: Fixed text overflow for large names in the authentication component.

--- a/components/41-organisms/header/_header.scss
+++ b/components/41-organisms/header/_header.scss
@@ -107,7 +107,6 @@ header.header {
 
     .authentication {
       align-items: center;
-      max-width: 210px;
       margin-left: .8rem;
 
       @include tablet {
